extract by rowId, default guzzle headers

--- a/Resources/views/Elasticsearch/mapping.json.twig
+++ b/Resources/views/Elasticsearch/mapping.json.twig
@@ -7,6 +7,9 @@
                     "config": {
                         "type": "string"
                     },
+                    "rowId": {
+                        "type": "integer"
+                    },
                     "analyze": {
 						"type": "integer"
                     }
